[gd_scene load_steps=5 format=3 uid="uid://dalnpf80dc2eb"]

[ext_resource type="Script" path="res://battle/buff/buff_ui.gd" id="1_si1rf"]
[ext_resource type="Theme" uid="uid://dau5p77g7wf6n" path="res://theme.tres" id="2_tojw5"]
[ext_resource type="TileSet" uid="uid://bdnbatw8to8ft" path="res://tiles/scenes.tres" id="2_vk8yl"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnsmk"]
size = Vector2(48, 48)

[node name="Buff" type="Control"]
custom_minimum_size = Vector2(50, 48)
layout_mode = 3
anchor_right = 0.025
anchor_bottom = 0.045
offset_right = 2.0
offset_bottom = -0.600002
mouse_filter = 1
script = ExtResource("1_si1rf")

[node name="Icon" type="TextureRect" parent="."]
layout_mode = 2
offset_right = 96.0
offset_bottom = 96.0
scale = Vector2(0.5, 0.5)
mouse_filter = 2

[node name="countdown_label" type="Label" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 18.0
offset_right = 71.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "2"

[node name="BuffStateMachine" type="Node" parent="."]

[node name="BuffBaseState" type="Node" parent="BuffStateMachine"]

[node name="BuffDraggingState" type="Node" parent="BuffStateMachine"]

[node name="BuffReleasedState" type="Node" parent="BuffStateMachine"]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(24, 24)
shape = SubResource("RectangleShape2D_lnsmk")

[node name="Panel" type="Control" parent="."]
anchors_preset = 0
mouse_filter = 2

[node name="TileMap" type="TileMap" parent="Panel"]
position = Vector2(-96, 93)
scale = Vector2(7.37833, 5.89604)
tile_set = ExtResource("2_vk8yl")
format = 2
layer_0/tile_data = PackedInt32Array(-131072, 65538, 18, -131071, 131074, 18)

[node name="detail" type="Label" parent="Panel"]
layout_mode = 0
offset_left = -34.0
offset_top = -84.0
offset_right = 83.0
offset_bottom = -13.0
theme = ExtResource("2_tojw5")
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "行动时大大2打打打"
autowrap_mode = 3

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
